# bz-wavelets

./: .gitignore  README.md  environment.yml  requirements.txt
notebooks/: pist-local.ipynb  plot_invert_scattering_torch.ipynb
src/bz-scatter/: pyproject.toml
src/bz-scatter/bz_scatter/: explore.py
