[tool.poetry]
name = "bz-scatter"
version = "0.1.0"
description = "exploring wavelets"
authors = ["Mike Martinez <brillozon@gmail.com>"]
readme = "README.md"
packages = [{include = "bz_scatter"}]

[tool.poetry.dependencies]
python = "^3.10"
kymatio = "^0.3.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
